--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,36 +1,51 @@
-@import "Global";
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .form {
   width: 90%;
   max-width: 300px;
   background-color: #fff;
   padding: 33px 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-content: center;
-  flex-direction: column;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
+
 label {
   text-align: center;
   font-weight: bold;
   font-size: 1.2rem;
   margin-bottom: 26px;
-  color: $color1;
+  color: #002664;
 }
+
 .input {
   margin-bottom: 26px;
   border-radius: 4px;
-  color: $color1;
+  color: #002664;
   border: thin thin thick;
-  border-color: $color1;
+  border-color: #002664;
 }
+
 .input:focus {
-  box-shadow: 10px 5px 5px $color1;
+  -webkit-box-shadow: 10px 5px 5px #002664;
+          box-shadow: 10px 5px 5px #002664;
 }
+
 .primary-button {
   cursor: pointer;
   display: inline-block;
   font-size: 20px;
-  background-color: $color1;
-  color: $color3;
+  background-color: #002664;
+  color: white;
   font-weight: 400;
   width: 100%;
   height: 48px;
@@ -38,11 +53,14 @@ label {
   border: none;
   font-family: "Montserrat";
 }
+
 .login-button {
   border-radius: 10px;
   margin-bottom: 26px;
 }
+
 a {
   text-decoration: none;
   text-align: center;
 }
+/*# sourceMappingURL=Login.css.map */
